--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -49,7 +49,10 @@ $this->placeholder('sidebar')->captureStart();
 				<ul>
 					<li><a href='/modification-informations-personnelles'>Voir mon profil</a></li>
 					<li><a href='/changer-mot-de-passe'>Changer mon mot de passe</a></li>
-					<li><a href='/document'>Documents</a></li>
+					<?php
+						if($user->id_groupe == 1 || $user->id_groupe == 2 || $user->id_groupe == 5)
+						echo "<li><a href='/document'>Documents</a></li>";
+					?>
 				</ul>
 			<?php
 			}
