--- a/application/views/scripts/certifications/index.phtml
+++ b/application/views/scripts/certifications/index.phtml
@@ -10,7 +10,8 @@
         <label for="nombre_question" class="optional">Nombre de question :</label>
         <label for="temps_certification" class="optional">Temps certification (mn) :</label>
         <label for="score_minimum" class="optional">Score minimum (%) :</label>
-        <label for="duree_validite" class="optional">Durée de validité (mois) :</label>   
+        <label for="duree_validite" class="optional">Durée de validité (mois) :</label>
+        <label for="nombre_passage" class="optional">Nombre de passage par mois :</label>   
     </div> <!-- label_certification -->
     <div id="input_certification">
         <input type="text" name="nom" id="nom" value="" />
@@ -19,6 +20,7 @@
         <input type="text" name="temps_certification" id="temps_certification" value="" />
         <input type="text" name="score_minimum" id="score_minimum" value="" />
         <input type="text" name="duree_validite" id="duree_validite" value="" />
+        <input type="text" name="nombre_passage" id="nombre_passage" value="" />
     </div> <!-- input_certification -->
 </div>
 <div id="delete_dialog" style="display : none">
@@ -44,7 +46,8 @@
                     {display: 'Nombre de questions', name : 'nombre_question', width : 150, sortable : true, align: 'left'},
                     {display: 'Temps de passage', name : 'temps_certification', width : 150, sortable : true, align: 'left'},
                     {display: 'Score minimum', name : 'score_minimum', width : 100, sortable : true, align: 'left'},
-                    {display: 'Durée de validité (mois)', name : 'duree_validite', width : 150, sortable : true, align: 'left'}
+                    {display: 'Durée de validité (mois)', name : 'duree_validite', width : 150, sortable : true, align: 'left'},
+                    {display: 'Nombre de passage par mois', name : 'nombre_passage', width : 150, sortable : true, align: 'left'}
             ],
            buttons : [
                     {name: 'Ajouter', bclass: 'add', onpress : add_record},
@@ -89,6 +92,7 @@
             $("#temps_certification").val('');
             $('#score_minimum').val('');
             $('#duree_validite').val('');
+            $('#nombre_passage').val('');
             
             $("#add_form").dialog({
                 title : "Ajouter une certification",
@@ -100,7 +104,7 @@
                             $.ajax({
                                 type : 'post',
                                 url : 'certifications/addcertification',
-                                data : { "nom" : $("#nom").val(), 'type' : $("#type").val(), "nombre_question" : $("#nombre_question").val(), "temps_certification" : $("#temps_certification").val(), 'score_minimum' : $('#score_minimum').val(), 'duree_validite' : $('#duree_validite').val()},
+                                data : { "nom" : $("#nom").val(), 'type' : $("#type").val(), "nombre_question" : $("#nombre_question").val(), "temps_certification" : $("#temps_certification").val(), 'score_minimum' : $('#score_minimum').val(), 'duree_validite' : $('#duree_validite').val(), 'nombre_passage' : $('#nombre_passage').val()},
                                 success : function(){
                                     $("#tableau_certifications").flexReload();
                                     $("#add_form").dialog('close');
@@ -155,6 +159,7 @@
                 $("#temps_certification").val($('td[abbr="temps_certification"] >div', this).html());
                 $("#score_minimum").val($('td[abbr="score_minimum"] >div', this).html());
                 $("#duree_validite").val($('td[abbr="duree_validite"] >div', this).html());
+                $("#nombre_passage").val($('td[abbr="nombre_passage"] >div', this).html());
             });
             
             $("#add_form").dialog({
@@ -167,7 +172,7 @@
                             $.ajax({
                                 type : 'post',
                                 url : '/certifications/editcertification',
-                                data : {'id_certification' : id, 'nom' : $("#nom").val(), 'type' : $("#type").val(), "nombre_question" : $("#nombre_question").val(), "temps_certification" : $("#temps_certification").val(), 'score_minimum' : $('#score_minimum').val(), 'duree_validite' : $('#duree_validite').val()},
+                                data : {'id_certification' : id, 'nom' : $("#nom").val(), 'type' : $("#type").val(), "nombre_question" : $("#nombre_question").val(), "temps_certification" : $("#temps_certification").val(), 'score_minimum' : $('#score_minimum').val(), 'duree_validite' : $('#duree_validite').val(), 'nombre_passage' : $('#nombre_passage').val()},
                                 success : function(){
                                     $("#tableau_certifications").flexReload();
                                     $("#add_form").dialog('close');
