--- a/application/views/scripts/utilisateurs/inscriptionformateur.phtml
+++ b/application/views/scripts/utilisateurs/inscriptionformateur.phtml
@@ -13,8 +13,8 @@
 						<dt id="inscription_type-label"><label for="inscription_type" class="optional"><span class="red">*</span> Civilité :</label></dt>
 						<dd id="inscription_type-element">
 							<select name="inscription_type" id="inscription_type">
-							    <option value="mr" label="Mr">Mr</option>
-							    <option value="mme" label="Mme">Mme</option>
+							    <option value="M." label="Mr">M.</option>
+							    <option value="Mme" label="Mme">Mme</option>
 							</select></dd>
 						<dt id="nom-label"><label for="nom" class="optional"><span class="red">*</span> Nom :</label></dt>
 						<dd id="nom-element">
