--- a/application/views/scripts/utilisateurs/menu-connecte.phtml
+++ b/application/views/scripts/utilisateurs/menu-connecte.phtml
@@ -40,7 +40,7 @@ if($user->id_groupe == 1){
 	// Menu formateur
 ?>
 <div id="menu-connecte">
-    <li><a href="/profil-utilisateur">Acceuil</a></li>
+    <li><a href="/profil-utilisateur">Accueil</a></li>
     <li><a href="/certification-disponible">Passer une certification</a></li>
     <li><a href="/formations-disponible">Formations disponibles</a></li>
 	    <li><a href="/mes-formations">Mes formations</a>
@@ -52,7 +52,7 @@ if($user->id_groupe == 1){
 	// Menu client
 ?>
 <div id="menu-connecte">
-    <li><a href="/profil-utilisateur">Acceuil</a></li>
+    <li><a href="/profil-utilisateur">Accueil</a></li>
     <li><a href="/formations-disponibles">Commander une formation</a></li>
     <li><a href="/formations-commandees">Voir mes formations</a></li>
     <li><a id="deconnexion_menu">Déconnexion</a></li>
