modification redirection apres certification pedagogique

--- a/application/views/scripts/certifications/passercertification.phtml
+++ b/application/views/scripts/certifications/passercertification.phtml
@@ -85,7 +85,7 @@
                 data : { 'certification' : reponse, 'id_certification' : $("#id_certification").val()},
                 success : function(){
                     $("#confirmer_fini").dialog('close');
-                	location.href = "/certifications/resultat";
+                	location.href = "/score-certification";
                 }
             });
         }
