--- a/application/views/scripts/certifications/resultat.phtml
+++ b/application/views/scripts/certifications/resultat.phtml
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 	$(document).ready(function(){
 		$("#retour").click(function(){
-			location.href = "/utilisateurs/";
+			location.href = "/profil-utilisateur";
 		});
 	});
 </script>
