page de visualisation des certifications pour les formateurs

--- a/application/views/scripts/certifications/listecertification.phtml
+++ b/application/views/scripts/certifications/listecertification.phtml
@@ -1,5 +1,6 @@
 <?php
 	echo $this->placeholder('menu-connecte');
+	echo $this->placeholder('sidebar');
 ?>
 <h1>Liste des Certifications</h1>
 <h5 class="h5_modifie">Certifications disponibles</h5>
