--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -54,8 +54,9 @@ $this->placeholder('sidebar')->captureStart();
 							echo "<li><a href='/document'>Documents</a></li>";
 
 						if($user->id_groupe == 2){
-							echo "<li><a href='/presentation-detaillee'>Présentation détaillée </a></li>";
+							echo "<li><a href='/presentation-detaillee'>Présentation formateur </a></li>";
 							echo "<li><a href='/convention-formateur'>Convention formateur </a></li>";
+							echo "<li><a href='/mes-certifications'>Mes certifications</a></li>";
 						}
 					?>
 				</ul>
