modification comportement enregistrement certifications

--- a/application/views/scripts/certifications/mescertifications.phtml
+++ b/application/views/scripts/certifications/mescertifications.phtml
@@ -1,9 +1,8 @@
 <?php
 	echo $this->placeholder('menu-connecte');
 	echo $this->placeholder('sidebar');
-
-	echo "<h1>Mes certifications</h1>";
 ?>
+<h1>Mes certifications</h1>
 <table>
 	<th>Nom de la certification</th>
 	<th>Date d'expiration</th>
